# hermes

./: .gitignore  AUTHORS  Ant.pb.go  CMakeLists.txt  FortHermesCppConfig.cmake.in  FrameReadout.pb.go  Header.pb.go  README.md  README.rst  Tag.pb.go  go.mod  go.sum  index.html  utils.go  utils_test.go
.github/workflows/: build.yml  docs.yml
cmake/: FindAsio.cmake
debian/: README.Debian  README.source  changelog  control  copyright  fort-hermes.cron.d.ex  fort-hermes.default.ex  fort-hermes.doc-base.EX  libfort-hermes-cpp-dev.dirs  libfort-hermes-cpp-dev.install  libfort-hermes-cpp0.1.install  libfort-hermes-dev.dirs  libfort-hermes-dev.install  libfort-hermes0.1.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch  watch.ex
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  search.json
docs/_static/js/: version_dropdown.js
docs/api/: Errors.rst  FileContext.rst  NetworkContext.rst  index.rst
docs/cldoc/: index.md
docs/html/: fh_context_t.html  fh_error_t.html  fh_frame_readout_t.html  fh_tag_t.html
docs/html/xml/: fh_error_t.xml  fh_tag_t.xml  report.xml
docs/xml/: fh_context_t.xml  fh_frame_readout_t.xml  index.xml
examples/: CMakeLists.txt  file-reader.c  network-reader.c
hermes-file-doctor/: file_sequence.go  hermes_segment_rewriter.go  main.go
hermes-file-reader/: main.go
latest/: .buildinfo  connect_to_a_leto_instance.html  format.html  genindex.html  getting_started.html  index.html  objects.inv  read_a_file_sequence.html  search.html  searchindex.js  version_dropdown.js
latest/.doctrees/: connect_to_a_leto_instance.doctree  environment.pickle  format.doctree  getting_started.doctree  index.doctree  read_a_file_sequence.doctree
latest/.doctrees/api/: Errors.doctree  FileContext.doctree  NetworkContext.doctree  index.doctree  py_fort_hermes_errors.doctree  py_fort_hermes_file.doctree  py_fort_hermes_network.doctree
latest/_sources/: format.rst.txt
latest/_sources/api/: py_fort_hermes_file.rst.txt
latest/api/: Errors.html  FileContext.html  NetworkContext.html  index.html  py_fort_hermes_errors.html  py_fort_hermes_file.html  py_fort_hermes_network.html
pkgconfig/: CMakeLists.txt  fort-hermes.pc.in
protobuf/: Ant.proto  CMakeLists.txt  FrameReadout.proto  Header.proto  SharedFrameReadout.proto  Tag.proto
python/: CMakeLists.txt  FrameReadout_pb2.py  Header_pb2.py  README.md  liveplot.py  liveplot.py~  networkreader.py
src/: CMakeLists.txt  Context.h  FileContext.cpp  FileContext.h  NetworkContext.cpp  NetworkContext.h  Path.h  hermes.cpp  hermes.h
src/fort-hermes/: Context.h  Error.h  FileContext.cpp  FileContext.h  NetworkContext.cpp  NetworkContext.h  hermes.cpp  hermes.h  protobuf
src/fort/hermes/: CMakeLists.txt  CheckHeader.cpp  CheckHeader.hpp  CheckHeaderUTest.cpp  Context.h  Context.hpp  Error.cpp  Error.h  Error.hpp  ErrorUTest.cpp  FileContext.cpp  FileContext.h  FileContext.hpp  FileContextUTest.cpp  NetworkContext.cpp  NetworkContext.hpp  NetworkContextUTest.cpp  Path.cpp  StreamServerUTest.cpp  StreamServerUTest.hpp  Types.hpp  UTestDataUTest.cpp  UTestDataUTest.hpp  hermes.cpp  hermes.h  main-check.cpp
src/fort/hermes/details/: FileSequence.cpp  FileSequence.hpp  FileSequenceUTest.cpp
src/go/hermes/: FrameReadout.pb.go  Header.pb.go  Tag.pb.go  utils_test.go
src/python/: .gitignore  CMakeLists.txt  RELEASE-VERSION  pyproject.toml  runTests.py  setup.cfg  setup.py  version.py
src/python/example/: hermes-file-reader.py  hermes-network-reader.py  liveplot.py
src/python/py_fort_hermes/: __init__.py  check.py  errors.py  file.py  network.py  open_file.py  open_network.py  utils.py
src/python/src/py_fort_hermes/: open_file.py  open_stream.py
src/python/tests/: assertions.py  streamserver.py  test_file.py  test_network.py  test_utils.py  utestdata.py
src/python/tests/utestdata/: utestdata.py
v0.5.3/: connect_to_a_leto_instance.html  format.html  genindex.html  getting_started.html  index.html  py-modindex.html  read_a_file_sequence.html  searchindex.js  version_dropdown.js
v0.5.3/.doctrees/: environment.pickle  getting_started.doctree  index.doctree  read_a_file_sequence.doctree
v0.5.3/.doctrees/api/: FileContext.doctree  index.doctree  py_fort_hermes_network.doctree
v0.5.3/_sources/: index.rst.txt  read_a_file_sequence.rst.txt
v0.5.3/_sources/api/: index.rst.txt
v0.5.3/api/: Errors.html  NetworkContext.html  py_fort_hermes_errors.html  py_fort_hermes_file.html
v0.5.4/: py-modindex.html  searchindex.js  version_dropdown.js
v0.5.4-zenodo/: format.html  version_dropdown.js
v0.5.4-zenodo/.doctrees/: format.doctree  getting_started.doctree  read_a_file_sequence.doctree
v0.5.4-zenodo/.doctrees/api/: NetworkContext.doctree
v0.5.4-zenodo/_sources/: connect_to_a_leto_instance.rst.txt
v0.5.4-zenodo/_sources/api/: py_fort_hermes_network.rst.txt
v0.5.4-zenodo/api/: py_fort_hermes_errors.html
v0.5.4/.doctrees/: connect_to_a_leto_instance.doctree
v0.5.4/.doctrees/api/: FileContext.doctree  py_fort_hermes_errors.doctree
v0.5.4/_sources/: getting_started.rst.txt
v0.5.4/api/: FileContext.html  py_fort_hermes_file.html
v0.5.6/: index.html  py-modindex.html  version_dropdown.js
v0.5.6/_sources/api/: Errors.rst.txt  FileContext.rst.txt  py_fort_hermes_errors.rst.txt
v0.5.6/api/: NetworkContext.html  py_fort_hermes_file.html  py_fort_hermes_network.html
